kubernetes/_archived/vaultls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultls
  namespace: apps
spec:
  selector:
    app: vaultls
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
