kubernetes/_archived/vaultls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultls
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: lab-selfsigned
spec:
  tls:
    - hosts:
        - vaultls.ninjatronics.home.arpa
      secretName: vaultls-tls
  rules:
    - host: vaultls.ninjatronics.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultls
                port:
                  number: 80
